[gd_scene load_steps=4 format=3 uid="uid://cyri8vn1gndjm"]

[ext_resource type="Script" path="res://Resources/Screens/BuildingSelectionScreen/building_selection_screen_scene.gd" id="1_n6lf7"]
[ext_resource type="PackedScene" uid="uid://to3pjx7oemdk" path="res://Resources/Screens/BuildingSelectionScreen/BuildingOption/building_option.tscn" id="2_d5p61"]
[ext_resource type="PackedScene" uid="uid://bb4dm7apdamr2" path="res://Resources/Screens/BuildingSelectionScreen/BuildingDetails/building_details.tscn" id="3_h4rq6"]

[node name="BuildingSelectionScreenScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n6lf7")
building_option_scene = ExtResource("2_d5p61")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select a building to build"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="BuildingOptionGrid" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
columns = 5

[node name="BuildingDetails" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_h4rq6")]
layout_mode = 2
